# DenoMagic

./: .gitignore  README.md  denomagic.py  pyproject.toml
DenoMagic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
denomagic/: __init__.py  denomagic.py
