[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "denomagic"
version = "1.0.1"
description = "Python package to run JavaScript/TypeScript(Deno backend) in Jupyter notebooks and Google Colab."
readme = "README.md"
authors = [
  {name = "Uniras"},
  {email = "tkappeng@gmail.com"}
]
license = {text = "MIT License"}
keywords = ["deno", "jupyter", "magic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/uniras/DenoMagic"
Repository = "https://github.com/uniras/DenoMagic"
